[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
pyyaml = "^6.0.1"
pynacl = "^1.5.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
python-dotenv = "^1.0.1"
httpx = "^0.26.0"
yarl = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "openhive"
version = "0.2.0"
authors = [
  { name="OpenHive Team", email="team@openhive.sh" },
]
description = "Core library for implementing H.I.V.E. Protocol compliant agents in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "pynacl"
]

license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/openhivestack/python-sdk"
Issues = "https://github.com/openhivestack/python-sdk/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["openhive"]